config.dev.json

--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "facebookAccount": {
-    "email": "",
-    "password": "",
+    "email": "kiraangel301@gmail.com",
+    "password": "realtimes",
     "2FASecret": "",
     "i_user": "",
     "proxy": null,
@@ -17,7 +17,7 @@
     "ignoreCommand": []
   },
   "adminBot": [
-    "100042292561861",
+    "61550114432457",
     "YOUR_SECOND_UID",
     "YOUR_THIRD_UID",
     "YOUR_FOURTH_UID",
